# PulseHive-ProofOfWork

./: .gitignore  Cargo.toml  README.md  SPEC.md  scaffold.sh  sync.sh
claude/: learning-points.md  settings.local.json.template
claude/skills/code-review/: SKILL.md
claude/skills/feature-development/: SKILL.md
claude/skills/pair-programming/: SKILL.md
claude/skills/release-process/: SKILL.md
claude/skills/skill-creator/: SKILL.md
claude/skills/testing-protocol/: SKILL.md
examples/go/go-patterns/: SKILL.md
examples/python/python-patterns/: SKILL.md
examples/rust/benchmark-development/: SKILL.md
examples/rust/rust-patterns/: SKILL.md
examples/typescript/ts-patterns/: SKILL.md
opencode/: opencode.json.template
src/: approval.rs  main.rs  provider_fix.rs  workflow.rs
src/agents/: coder.rs  explorer.rs  mod.rs  planner.rs  tester.rs
src/tools/: file_read.rs  file_write.rs  mod.rs  search.rs  shell_exec.rs  tree.rs
templates/: AGENTS.md.template  CLAUDE.md.template
templates/skill-template/: SKILL.md.template
